@@ -16,6 +16,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.eclipse.sw360.datahandler.cloudantclient.DatabaseConnectorCloudant;
 import org.eclipse.sw360.datahandler.common.DatabaseSettings;
+import org.eclipse.sw360.datahandler.common.SW360Constants;
 import org.eclipse.sw360.datahandler.permissions.ProjectPermissions;
 import org.eclipse.sw360.datahandler.thrift.PaginationData;
 import org.eclipse.sw360.datahandler.thrift.packages.Package;
@@ -42,7 +43,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static com.google.common.base.Strings.nullToEmpty;
@@ -55,6 +55,15 @@ import static com.google.common.base.Strings.nullToEmpty;
  * @author alex.borodin@evosoft.com
  */
 public class NouveauLuceneAwareDatabaseConnector extends LuceneAwareCouchDbConnector {
+
+    /**
+     * Fields in projects which can be searched with
+     * ${@code SW360Constants.PROJECT_SEARCH_EMPTY_TOKEN}
+     */
+    public static final Set<String> EMPTY_SEARCH_FIELDS = Set.of(
+            Project._Fields.BUSINESS_UNIT.getFieldName(),
+            Project._Fields.TAG.getFieldName()
+    );
 
     private static final Logger log = LogManager.getLogger(NouveauLuceneAwareDatabaseConnector.class);
 
@@ -442,6 +451,12 @@ public class NouveauLuceneAwareDatabaseConnector extends LuceneAwareCouchDbConne
     }
 
     private static @NotNull String formatSubquery(@NotNull Set<String> filterSet, final String fieldName) {
+        List<String> queryParts = new ArrayList<>();
+        if (EMPTY_SEARCH_FIELDS.contains(fieldName)
+                && filterSet.contains(SW360Constants.PROJECT_SEARCH_EMPTY_TOKEN)) {
+            queryParts.add("%s:\"%s\"".formatted(fieldName, SW360Constants.PROJECT_SEARCH_EMPTY_TOKEN));
+        }
+
         final Function<String, String> addType = input -> {
             // Handle pre-formatted queries from prepareWildcardQuery
             if (input.startsWith("\"") && input.endsWith("\"")) {
@@ -463,8 +478,11 @@ public class NouveauLuceneAwareDatabaseConnector extends LuceneAwareCouchDbConne
             }
         };
 
-        Stream<String> searchFilters = filterSet.stream().map(addType);
-        return "( " + OR.join(searchFilters.collect(Collectors.toList())) + " ) ";
+        queryParts.addAll(filterSet.stream()
+                .filter(value -> !SW360Constants.PROJECT_SEARCH_EMPTY_TOKEN.equals(value))
+                .map(addType)
+                .toList());
+        return "( " + OR.join(queryParts) + " ) ";
     }
 
     public static @NotNull String prepareWildcardQuery(@NotNull String query) {
